# Sndctl

./: .gitignore  README.md  TEST_ENVIRONMENT.md
.devcontainer/: devcontainer.json  setup-sonos-cache.py
.github/: copilot-instructions.md
.github/workflows/: deb.yml  release-apt-repo.yml  release-tarballs.yml  release.yml
api/: .gitignore  AppDbContext.cs  Program.cs  api.csproj  appsettings.Development.json  appsettings.json
api-python/: README.md  pyproject.toml
api-python/src/sndctl/: __init__.py  config.py  main.py
api-python/src/sndctl/models/: sonos.py  upgrade.py
api-python/src/sndctl/routers/: upgrades.py  voice.py
api-python/src/sndctl/services/: __init__.py  soco_service.py  upgrade_service.py
api-python/src/sonos_hub/: __init__.py  config.py  main.py
api-python/src/sonos_hub/models/: __init__.py  macro.py  voice.py
api-python/src/sonos_hub/routers/: __init__.py  macros.py  sonos.py
api-python/src/sonos_hub/services/: __init__.py  macro_service.py  soco_cli_service.py  sonos_command_service.py
api/Controllers/: SampleController.cs
api/Models/: SonosModels.cs
api/Services/: SocoCliService.cs  SonosCommandService.cs
data/: .gitkeep
docs/: AUTO_UPGRADE.md  MACROS_FILE_CONFIG.md  PYTHON_MIGRATION_PLAN.md  SNDCTL_SERVER_INTEGRATION.md  SNDCTL_SERVER_VOICE_SESSION.md
packaging/: nfpm.yaml  postinstall.sh  sndctl-upgrade.service  sndctl-upgrade.sh  sndctl-upgrade.timer  sndctl.service  sndctrl.service  sonos-sound-hub.service
sonos-mcp-server/: README.md  pyproject.toml
wwwroot/: app.html  index.html  manifest.json
(+15 files in other folders)
